--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,13 @@
         <artifactId>h2</artifactId>
         <version>2.1.214</version>
     </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>4.9.0</version>
+            <scope>test</scope>
+        </dependency>
+
 
     </dependencies>
 
